fixed mobile dark mode

--- a/public/index.html
+++ b/public/index.html
@@ -163,13 +163,14 @@
             <div class="mobile-menu hidden relative">
                 <div class="flex flex-col items-center space-y-5 pt-5 pb-3 text-lg md:text-xl">
                     <a href="" class="block text-yellow-600 pb-1 border-b-2 border-yellow-600">Home</a>
-                    <a href="" class="block text-gray-600">Download</a>
-                    <a href="" class="block text-gray-600">Update Log</a>
-                    <a href="" class="block text-gray-600">FAQs</a>
-                    <a href="" class="block text-gray-600">Contact Us</a>
+                    <a href="" class="block text-gray-600 dark:text-gray-300">Download</a>
+                    <a href="" class="block text-gray-600 dark:text-gray-300">Update Log</a>
+                    <a href="" class="block text-gray-600 dark:text-gray-300">FAQs</a>
+                    <a href="" class="block text-gray-600 dark:text-gray-300">Contact Us</a>
 
                     <!-- mobile language button -->
-                    <button class="mobile-language-button text-gray-600 flex items-center space-x-1">
+                    <button class="mobile-language-button text-gray-600 dark:text-gray-300 flex items-center space-x-1">
+
                         <p class="pl-3">English</p>
                         <!-- icon -->
                         <div class="pt-0">
@@ -180,7 +181,8 @@
                     </button>
                     <!-- mobile language menu -->
                     <div class="mobile-language-menu hidden">
-                        <div class="w-screen bg-gray-50 shadow-inner grid grid-cols-3 place-items-center py-4 px-3 gap-y-5 text-gray-600">
+                        <div class="w-screen bg-gray-50 dark:bg-[#1E1E1E] shadow-inner grid grid-cols-3 place-items-center py-4 px-3 gap-y-5 text-gray-600 dark:text-gray-300">
+
                             <a href="">简体中文</a>
                             <a href="">русский</a>
                             <a href="">Deutsche</a>
