--- a/public/index.html
+++ b/public/index.html
@@ -79,7 +79,6 @@
                                 <!-- icon -->
                                 <div class="language-menu-icon transform transition-transform duration-300">
                                     <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 transition-colors duration-200 dark:text-gray-300 group-hover:text-yellow-600 dark:group-hover:text-yellow-500" fill="none" viewbox="0 0 24 24" stroke="currentColor">
-
                                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M19 9l-7 7-7-7"/>
                                     </svg>
                                 </div>
@@ -246,7 +245,7 @@
 
         <!-- footer-->
         <footer
-            class="bg-white dark:bg-[#141414] text-gray-500 dark:text-gray-300">
+            class="bg-white dark:bg-[#141414] text-gray-500 dark:text-gray-300 transition duration-200 ease-in-out">
 
             <!-- above line -->
             <div
