--- a/public/index.html
+++ b/public/index.html
@@ -213,7 +213,9 @@
 
                     <!-- Download buttons -->
                     <div class="flex flex-col lg:flex-row space-y-4 lg:space-y-0 lg:space-x-4 pt-4 lg:pt-6 text-center">
-                        <a class="py-2 px-4 drop-shadow-md bg-yellow-500 dark:bg-yellow-600 text-white dark:text-gray-200 hover:bg-yellow-400 hover:hover:bg-yellow-500 active:bg-yellow-700 dark:active:bg-yellow-700 transition-colors duration-400 rounded-md cursor-pointer" href="">
+                        <a class="py-2 px-4 drop-shadow-md bg-yellow-500 dark:bg-[#791c0c] text-white dark:text-gray-200 hover:bg-yellow-400 dark:hover:bg-[#8f220e] active:bg-yellow-700 dark:active:bg-[#6e1a0b] transition-colors duration-400 rounded-md cursor-pointer" href="">
+
+
                             Download for M1 Mac
                         </a>
                         <a class="py-2 px-4 drop-shadow-md bg-gray-50 dark:bg-[#3f3f3f] text-gray-800 dark:text-gray-200 hover:bg-white dark:hover:bg-[#505050] active:bg-gray-100 dark:active:bg-[#2e2e2e] transition-colors duration-400 rounded-md cursor-pointer" href="">
@@ -227,7 +229,6 @@
                 <div id="latest-build-text" class="hidden group lg:flex rounded-lg max-h-[17rem] w-[27.5rem] cursor-default border-2 dark:border-[#444444] hover:border-transparent dark:hover:border-transparent hover:shadow-lg hover:bg-white dark:hover:bg-[#363636] transition-all duration-300">
 
                     <div class="mt-6 mb-[24px] ml-8 mr-2 pr-2 overflow-hidden group-hover:overflow-y-auto text-gray-400 dark:text-[#444444] group-hover:text-gray-800 dark:group-hover:text-gray-200 transition-all duration-300 relative">
-
 
                         <p class="font-semibold text-lg">Latest Build Info</p>
                         <br>
