--- a/public/download/index.html
+++ b/public/download/index.html
@@ -39,7 +39,7 @@
                 <!-- primary nav -->
                 <div class="hidden xl:flex items-center space-x-10 pt-1">
 
-                    <a href="" class="text-[17px] text-yellow-500 border-b-2 border-yellow-500 py-3">
+                    <a href="../" class="text-[17px] text-yellow-500 border-b-2 border-yellow-500 py-3">
                         Home
                     </a>
                     <a href="" class="text-gray-800 dark:text-gray-300 text-[17px] hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150">
