--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
 
     <body
         class="bg-gray-100 dark:bg-[#1E1E1E] font-montserrat transition duration-200 ease-in-out">
+
         <!-- nav bar -->
         <nav class="max-w-screen-2xl px-6 lg:pr-12 lg:pl-14 mx-auto py-3 lg:py-1 fixed w-screen top-0 bg-white dark:bg-[#141414] transition duration-200 ease-in-out filter drop-shadow-md z-20">
             <div
@@ -39,7 +40,7 @@
                 <!-- primary nav -->
                 <div class="hidden xl:flex items-center space-x-10 pt-1">
 
-                    <a href="" class="text-[17px] text-yellow-500 border-b-2 border-yellow-500 py-3">
+                    <a href="./" class="text-[17px] text-yellow-500 border-b-2 border-yellow-500 py-3">
                         Home
                     </a>
                     <a href="download/" class="text-gray-800 dark:text-gray-300 text-[17px] hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150">
