fixed mobile language menu dark mode delay

--- a/public/index.html
+++ b/public/index.html
@@ -183,7 +183,8 @@
                     </button>
                     <!-- mobile language menu -->
                     <div class="mobile-language-menu hidden">
-                        <div class="w-screen bg-gray-50 dark:bg-[#1E1E1E] shadow-inner grid grid-cols-3 place-items-center py-4 px-3 gap-y-5 text-gray-600 dark:text-gray-300">
+                        <div class="w-screen bg-gray-50 dark:bg-[#1E1E1E] shadow-inner grid grid-cols-3 place-items-center py-4 px-3 gap-y-5 text-gray-600 dark:text-gray-300 transition duration-200 ease-in-out">
+
 
                             <a href="">简体中文</a>
                             <a href="">русский</a>
