--- a/public/index.html
+++ b/public/index.html
@@ -250,7 +250,7 @@
 
         <!-- footer-->
         <footer
-            class="bg-white dark:bg-[#141414] text-gray-500 dark:text-gray-300 transition duration-200 ease-in-out">
+            class="bg-white dark:bg-[#141414] text-gray-500 dark:text-gray-400 transition duration-200 ease-in-out">
 
             <!-- above line -->
             <div
@@ -287,7 +287,7 @@
             <div class="container px-6 pb-4 mx-auto">
                 <hr class="h-px my-6 bg-gray-300 border-none"/>
                 <div>
-                    <p class="text-center text-gray-500 dark:text-gray-300">© PlayCover 2021 - All rights reserved</p>
+                    <p class="text-center">© PlayCover 2021 - All rights reserved</p>
                 </div>
             </div>
         </footer>
