--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,10 @@
         <meta name="description" content="this is my site description"/>
         <meta name="keywords" content="8-12 words max"/>
         <title>PlayCover App</title>
+        <link href="css/styles.css" rel="stylesheet"/>
         <link
-        href="css/styles.css" rel="stylesheet"/>
+        rel="shortcut icon" type="image/jpg" href="assets/favicon.png"/>
+
 
         <!-- fonts import -->
         <link rel="preconnect" href="https://fonts.googleapis.com"/>
