auto dark mode added

--- a/public/index.html
+++ b/public/index.html
@@ -297,6 +297,7 @@
         <!-- js -->
         <script src="js/language-button.js"></script>
         <script src="js/mobile-buttons.js"></script>
+        <script src="js/dark-mode-auto.js"></script>
         <script src="js/dark-mode.js"></script>
         <script src="js/local-storage-track.js"></script>
     </body>
