--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,8 @@
         <meta name="keywords" content="8-12 words max"/>
         <title>PlayCover App</title>
         <link href="css/styles.css" rel="stylesheet"/>
-        <link
-        rel="shortcut icon" type="image/jpg" href="assets/favicon.png"/>
-
+        <link rel="shortcut icon" type="image/jpg" href="assets/favicon.png"/>
+        <script src="js/local-storage-track.js"></script>
 
         <!-- fonts import -->
         <link rel="preconnect" href="https://fonts.googleapis.com"/>
@@ -21,7 +20,6 @@
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet"/>
         <!-- Montserrat font-->
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600&display=swap" rel="stylesheet">
-        <script src="js/local-storage-track.js"></script>
     </head>
 
     <body
