--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,8 @@
     </head>
 
     <body
-        class="bg-gray-100 dark:bg-[#1E1E1E] font-montserrat transition duration-200 ease-in-out">
+        class="flex flex-col h-screen justify-between bg-gray-100 dark:bg-[#1E1E1E] font-montserrat transition duration-200 ease-in-out">
+
         <!-- nav bar -->
         <nav class="max-w-screen px-6 lg:pr-12 lg:pl-14 mx-auto py-3 lg:py-1 fixed w-screen top-0 bg-white dark:bg-[#141414] transition duration-200 ease-in-out filter drop-shadow-md z-20">
             <div
@@ -39,7 +40,6 @@
 
                 <!-- primary nav -->
                 <div class="hidden xl:flex items-center space-x-10 pt-1">
-
                     <a href="./" class="text-[17px] text-yellow-500 border-b-2 border-yellow-500 py-3">
                         Home
                     </a>
@@ -200,53 +200,56 @@
         </nav>
 
         <!-- content -->
-        <div
-            id="hero-content" class="flex flex-col items-center lg:items-start lg:flex-row justify-center space-y-10 lg:space-y-0 lg:space-x-40 pt-28 pb-10  lg:mt-auto">
-
-            <!-- text -->
+        <main>
+            <!-- hero section -->
             <div
-                id="hero-text" class="flex flex-col space-y-6">
-                <!-- intro text -->
+                id="hero-content" class="flex flex-col items-center lg:items-start lg:flex-row justify-center space-y-10 lg:space-y-0 lg:space-x-40 pt-28 pb-10  lg:mt-auto">
+
+                <!-- text -->
                 <div
-                    id="intro-text" class="max-w-full flex flex-col items-center md:block dark:text-gray-300">
-                    <!-- logo -->
-                    <h1 class="font-extrabold text-[48px] bg-gradient-to-b from-logo-pink to-logo-orange text-transparent bg-clip-text">PlayCover</h1>
+                    id="hero-text" class="flex flex-col space-y-6">
+                    <!-- intro text -->
+                    <div
+                        id="intro-text" class="max-w-full flex flex-col items-center md:block dark:text-gray-300">
+                        <!-- logo -->
+                        <h1 class="font-extrabold text-[48px] bg-gradient-to-b from-logo-pink to-logo-orange text-transparent bg-clip-text">PlayCover</h1>
 
-                    <!-- hero text -->
-                    <p class="md:pl-1 max-w-xs md:max-w-sm pt-6 md:pt-0 text-center md:text-left text-lg">an app that allows you to run iOS apps & games on M1 & Intel Mac with mouse, keyboard and controller support.</p>
+                        <!-- hero text -->
+                        <p class="md:pl-1 max-w-xs md:max-w-sm pt-6 md:pt-0 text-center md:text-left text-lg">an app that allows you to run iOS apps & games on M1 & Intel Mac with mouse, keyboard and controller support.</p>
 
-                    <!-- Download buttons -->
-                    <div class="flex flex-col lg:flex-row space-y-4 lg:space-y-0 lg:space-x-4 pt-4 lg:pt-6 text-center">
-                        <a class="py-2 px-4 drop-shadow-md bg-yellow-500 dark:bg-[#791c0c] text-white dark:text-gray-200 hover:bg-yellow-400 dark:hover:bg-[#8f220e] active:bg-yellow-700 dark:active:bg-[#6e1a0b] transition-colors duration-400 rounded-md cursor-pointer" href="">
+                        <!-- Download buttons -->
+                        <div class="flex flex-col lg:flex-row space-y-4 lg:space-y-0 lg:space-x-4 pt-4 lg:pt-6 text-center">
+                            <a class="py-2 px-4 drop-shadow-md bg-yellow-500 dark:bg-[#791c0c] text-white dark:text-gray-200 hover:bg-yellow-400 dark:hover:bg-[#8f220e] active:bg-yellow-700 dark:active:bg-[#6e1a0b] transition-colors duration-400 rounded-md cursor-pointer" href="">
 
 
-                            Download for M1 Mac
-                        </a>
-                        <a class="py-2 px-4 drop-shadow-md bg-gray-50 dark:bg-[#3f3f3f] text-gray-800 dark:text-gray-200 hover:bg-white dark:hover:bg-[#505050] active:bg-gray-100 dark:active:bg-[#2e2e2e] transition-colors duration-400 rounded-md cursor-pointer" href="">
+                                Download for M1 Mac
+                            </a>
+                            <a class="py-2 px-4 drop-shadow-md bg-gray-50 dark:bg-[#3f3f3f] text-gray-800 dark:text-gray-200 hover:bg-white dark:hover:bg-[#505050] active:bg-gray-100 dark:active:bg-[#2e2e2e] transition-colors duration-400 rounded-md cursor-pointer" href="">
 
-                            Download for Intel Mac
-                        </a>
+                                Download for Intel Mac
+                            </a>
+                        </div>
+                    </div>
+
+                    <!-- build text -->
+                    <div id="latest-build-text" class="hidden group lg:flex rounded-lg max-h-[17rem] w-[27.5rem] cursor-default border-2 dark:border-[#444444] hover:border-transparent dark:hover:border-transparent hover:shadow-lg hover:bg-white dark:hover:bg-[#363636] transition-all duration-300">
+
+                        <div class="mt-6 mb-[24px] ml-8 mr-2 pr-2 overflow-hidden group-hover:overflow-y-auto text-gray-400 dark:text-[#444444] group-hover:text-gray-800 dark:group-hover:text-gray-200 transition-all duration-300 relative">
+
+                            <p class="font-semibold text-lg">Latest Build Info</p>
+                            <br>
+                            <p>Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build</p>
+
+                        </div>
                     </div>
                 </div>
 
-                <!-- build text -->
-                <div id="latest-build-text" class="hidden group lg:flex rounded-lg max-h-[17rem] w-[27.5rem] cursor-default border-2 dark:border-[#444444] hover:border-transparent dark:hover:border-transparent hover:shadow-lg hover:bg-white dark:hover:bg-[#363636] transition-all duration-300">
-
-                    <div class="mt-6 mb-[24px] ml-8 mr-2 pr-2 overflow-hidden group-hover:overflow-y-auto text-gray-400 dark:text-[#444444] group-hover:text-gray-800 dark:group-hover:text-gray-200 transition-all duration-300 relative">
-
-                        <p class="font-semibold text-lg">Latest Build Info</p>
-                        <br>
-                        <p>Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build</p>
-
-                    </div>
+                <!-- image -->
+                <div id="hero-image">
+                    <img class="max-w-xs md:max-w-sm rounded shadow" src="assets/screenshot-1.jpeg" alt="genshin-impact"/>
                 </div>
             </div>
-
-            <!-- image -->
-            <div id="hero-image">
-                <img class="max-w-xs md:max-w-sm rounded shadow" src="assets/screenshot-1.jpeg" alt="genshin-impact"/>
-            </div>
-        </div>
+        </main>
 
         <!-- footer-->
         <footer
