fixed footer heading y-spacing

--- a/public/index.html
+++ b/public/index.html
@@ -197,14 +197,14 @@
 				<!-- text -->
 				<div class="pt-6 md:pt-0">
 					<!-- logo -->
-					<h1 class="pb-1 md:py-[0.5vw] 4K:pb-[1vw] font-extrabold text-2xl md:text-[1.6vw] bg-gradient-to-b from-logo-pink to-logo-orange text-transparent bg-clip-text">PlayCover</h1>
+					<h1 class="pb-1 md:py-[0.5vw] FHD:pb-[0.6vw] 4K:pb-[1.4vw] font-extrabold text-2xl md:text-[1.6vw] bg-gradient-to-b from-logo-pink to-logo-orange text-transparent bg-clip-text">PlayCover</h1>
 					<!-- legal text -->
 					<p class="max-w-lg md:max-w-[37vw] md:text-[1.1vw] md:leading-[1.6vw]">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis quisquam libero minima corrupti, ad sunt asperiores rem atque nihil quidem.</p>
 				</div>
 
 				<!-- links -->
 				<div class="flex justify-between items-start flex-col mt-auto md:pt-0">
-					<h3 class="text-xl md:text-[1.4vw] pb-4 md:pb-[1vw] FHD:pb-[1.4vw] 4K:FHD:pb-[1.8vw]">Links</h3>
+					<h3 class="text-xl md:text-[1.4vw] pb-4 md:pb-[1.1vw] FHD:pb-[1.4vw] 4K:pb-14">Links</h3>
 					<!-- icons -->
 					<div class="flex space-x-5 md:space-x-[1.5vw]">
 						<!-- github -->
