--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
 
 				<!-- primary nav -->
 				<div class="hidden xl:flex items-center space-x-[2.7vw] pt-1 text-[1.18vw] text-gray-800 dark:text-gray-300">
-					<a href="./" class="text-yellow-500 border-b-[0.2vw] border-yellow-500 py-[0.75vw]"> Home </a>
+					<a href="./" class="text-yellow-500 border-b-[0.2vw] border-yellow-500 py-3 4K:py-9"> Home </a>
 					<a href="download/" class="hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Download </a>
 					<a href="" class="hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Update Log </a>
 					<a href="" class="hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> FAQs </a>
@@ -55,7 +55,7 @@
 							<button class="language-button flex items-center space-x-1 border-[0.12vw] border-gray-600 dark:border-gray-300 rounded-[0.4vw] px-[0.8vw] py-[0.25vw] transition-colors duration-200 group hover:border-yellow-600 dark:hover:border-yellow-500">
 								<span href="" class="text-gray-800 dark:text-gray-300 transition-colors duration-200 group-hover:text-yellow-600 dark:group-hover:text-yellow-500"> English </span>
 								<!-- icon -->
-								<div class="language-menu-icon transition-transform duration-200">
+								<div class="language-menu-icon transform transition-transform duration-300">
 									<svg xmlns="http://www.w3.org/2000/svg" class="h-[1.3vw] w-[1.3vw] transition-colors duration-200 dark:text-gray-300 group-hover:text-yellow-600 dark:group-hover:text-yellow-500" fill="none" viewbox="0 0 24 24" stroke="currentColor">
 										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M19 9l-7 7-7-7" />
 									</svg>
@@ -155,37 +155,37 @@
 		<!-- content -->
 		<main class="">
 			<!-- hero -->
-			<section id="hero-content" class="flex flex-col items-center lg:items-start lg:flex-row justify-center space-y-10 lg:space-y-0 lg:space-x-[11vw] pt-28 lg:pt-[8vw] pb-8 lg:pb-[3vw] lg:mt-auto">
+			<section id="hero-content" class="flex flex-col items-center lg:items-start lg:flex-row justify-center space-y-10 lg:space-y-0 lg:space-x-[12%] 2xl:space-x-[20%] pt-28 pb-10 lg:mt-auto">
 				<!-- text -->
-				<div id="hero-text" class="flex flex-col space-y-6 lg:space-y-[1.5vw]">
+				<div id="hero-text" class="flex flex-col space-y-6">
 					<!-- intro text -->
 					<div id="intro-text" class="max-w-full flex flex-col items-center md:block dark:text-gray-300">
 						<!-- logo -->
-						<h1 class="font-extrabold text-[48px] lg:text-[3.3vw] bg-gradient-to-b from-logo-pink to-logo-orange text-transparent bg-clip-text">PlayCover</h1>
+						<h1 class="font-extrabold text-[48px] bg-gradient-to-b from-logo-pink to-logo-orange text-transparent bg-clip-text">PlayCover</h1>
 
 						<!-- hero text -->
-						<p class="md:pl-[0.25vw] max-w-xs md:max-w-[26.5vw] pt-6 md:pt-[0.3vw] text-center md:text-left text-lg lg:text-[1.3vw] lg:leading-[2vw]">an app that allows you to run iOS apps & games on M1 & Intel Mac with mouse, keyboard and controller support.</p>
+						<p class="md:pl-1 max-w-xs md:max-w-sm pt-6 md:pt-0 text-center md:text-left text-lg">an app that allows you to run iOS apps & games on M1 & Intel Mac with mouse, keyboard and controller support.</p>
 
 						<!-- Download buttons -->
-						<div class="flex flex-col lg:flex-row space-y-4 lg:space-y-0 lg:space-x-[1.1vw] pt-4 lg:pt-[1.5vw] lg:text-[1.12vw] text-center">
-							<a class="py-2 px-4 lg:py-[0.6vw] lg:px-[1vw] drop-shadow-md FHD:drop-shadow-lg 4K:drop-shadow-xl bg-yellow-500 dark:bg-[#791c0c] text-white dark:text-gray-200 hover:bg-yellow-400 dark:hover:bg-[#8f220e] active:bg-yellow-700 dark:active:bg-[#6e1a0b] transition-colors duration-400 rounded-md lg:rounded-[0.4vw] cursor-pointer" href=""> Download for M1 Mac </a>
-							<a class="py-2 px-4 lg:py-[0.6vw] lg:px-[1vw] drop-shadow-md 4K:drop-shadow-xl bg-gray-50 dark:bg-[#3f3f3f] text-gray-800 dark:text-gray-200 hover:bg-white dark:hover:bg-[#505050] active:bg-gray-100 dark:active:bg-[#2e2e2e] transition-colors duration-400 rounded-md lg:rounded-[0.4vw] cursor-pointer" href=""> Download for Intel Mac </a>
+						<div class="flex flex-col lg:flex-row space-y-4 lg:space-y-0 lg:space-x-4 pt-4 lg:pt-6 text-center">
+							<a class="py-2 px-4 drop-shadow-md bg-yellow-500 dark:bg-[#791c0c] text-white dark:text-gray-200 hover:bg-yellow-400 dark:hover:bg-[#8f220e] active:bg-yellow-700 dark:active:bg-[#6e1a0b] transition-colors duration-400 rounded-md cursor-pointer" href=""> Download for M1 Mac </a>
+							<a class="py-2 px-4 drop-shadow-md bg-gray-50 dark:bg-[#3f3f3f] text-gray-800 dark:text-gray-200 hover:bg-white dark:hover:bg-[#505050] active:bg-gray-100 dark:active:bg-[#2e2e2e] transition-colors duration-400 rounded-md cursor-pointer" href=""> Download for Intel Mac </a>
 						</div>
 					</div>
 
 					<!-- build text -->
-					<div id="latest-build-text" class="hidden group lg:flex rounded-[0.5vw] h-[18.8vw] w-[30.1vw] cursor-default border-[0.2vw] dark:border-[#444444] hover:border-transparent dark:hover:border-transparent hover:shadow-lg FHD:hover:shadow-xl 4K:hover:shadow-2xl hover:bg-white dark:hover:bg-[#363636] transition-all duration-300">
-						<div class="mt-[1.6vw] mb-[1.5vw] ml-[2vw] mr-[0.5vw] pr-[0.5vw] overflow-hidden group-hover:overflow-y-auto text-gray-400 dark:text-[#444444] group-hover:text-gray-800 dark:group-hover:text-gray-200 transition-all duration-300 relative">
-							<p class="font-semibold text-[1.25vw] leading-[1.75vw]">Latest Build Info</p>
+					<div id="latest-build-text" class="hidden group lg:flex rounded-lg max-h-[17rem] w-[27.5rem] cursor-default border-2 dark:border-[#444444] hover:border-transparent dark:hover:border-transparent hover:shadow-lg hover:bg-white dark:hover:bg-[#363636] transition-all duration-300">
+						<div class="mt-6 mb-[24px] ml-8 mr-2 pr-2 overflow-hidden group-hover:overflow-y-auto text-gray-400 dark:text-[#444444] group-hover:text-gray-800 dark:group-hover:text-gray-200 transition-all duration-300 relative">
+							<p class="font-semibold text-lg">Latest Build Info</p>
 							<br />
-							<p class="text-[1.1vw] leading-[1.7vw]">Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build</p>
+							<p>Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build</p>
 						</div>
 					</div>
 				</div>
 
 				<!-- image -->
 				<div id="hero-image">
-					<img class="max-w-xs md:max-w-[26.75vw] rounded lg:rounded-[0.4vw] shadow" src="assets/screenshot-1.jpeg" alt="genshin impact cover" />
+					<img class="max-w-xs md:max-w-sm 2xl:max-w-md FHD:max-w-lg 4K:max-w-4xl rounded shadow" src="assets/screenshot-1.jpeg" alt="genshin impact cover" />
 				</div>
 			</section>
 		</main>
@@ -193,44 +193,38 @@
 		<!-- footer-->
 		<footer class="bg-white dark:bg-[#141414] text-gray-500 dark:text-gray-400 transition duration-200 ease-in-out">
 			<!-- above line -->
-			<div class="flex justify-between max-w-screen mx-auto pt-8 md:pt-[2vw] pl-[6%] md:pl-[5.1%] pr-16 md:pr-[5%] flex-col-reverse md:flex-row">
+			<div class="flex justify-between max-w-screen mx-auto pt-8 pl-7 md:pl-10 pr-16 flex-col-reverse md:flex-row">
 				<!-- text -->
-				<div class="pt-6 md:pt-0">
+				<div class="pt-6 md:pt-0 md:pl-2">
 					<!-- logo -->
-					<h1 class="pb-1 md:py-[0.5vw] FHD:pb-[0.6vw] 4K:pb-[1.4vw] font-extrabold text-2xl md:text-[1.6vw] bg-gradient-to-b from-logo-pink to-logo-orange text-transparent bg-clip-text">PlayCover</h1>
-					<!-- legal text -->
-					<p class="max-w-lg md:max-w-[37vw] md:text-[1.1vw] md:leading-[1.6vw]">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis quisquam libero minima corrupti, ad sunt asperiores rem atque nihil quidem.</p>
+					<h1 class="pb-1 font-extrabold text-2xl bg-gradient-to-b from-logo-pink to-logo-orange text-transparent bg-clip-text">PlayCover</h1>
+					<p class="max-w-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis quisquam libero minima corrupti, ad sunt asperiores rem atque nihil quidem.</p>
 				</div>
-
 				<!-- links -->
 				<div class="flex justify-between items-start flex-col mt-auto md:pt-0">
-					<h3 class="text-xl md:text-[1.4vw] pb-4 md:pb-[1.1vw] FHD:pb-[1.4vw] 4K:pb-14">Links</h3>
+					<h3 class="text-xl p-[3px] pb-4">Links</h3>
 					<!-- icons -->
-					<div class="flex space-x-5 md:space-x-[1.5vw]">
+					<div class="flex space-x-5">
 						<!-- github -->
 						<a href="https://github.com/Letscoder/PlayCover" target="_blank" class="flex flex-col group">
-							<svg class="h-12 md:h-[3vw] pb-1 md:pb-[0] fill-current text-gray-900 dark:text-gray-200" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 512 512"><path d="M256 5.3C114.6 5.3 0 120.4 0 262.3a257 257 0 00175.1 244c12.8 2.3 17.5-5.6 17.5-12.5l-.4-43.7C121 465.6 106 415.7 106 415.7 94.4 386 77.6 378 77.6 378c-23.3-16 1.7-15.7 1.7-15.7 25.7 1.9 39.2 26.5 39.2 26.5 22.8 39.3 60 28 74.5 21.4 2.3-16.6 9-28 16.3-34.4-56.9-6.5-116.6-28.5-116.6-127 0-28 10-51 26.3-69-2.6-6.5-11.4-32.6 2.5-68 0 0 21.5-6.9 70.4 26.4a244.2 244.2 0 01128.2 0C369 105 390.5 112 390.5 112c14 35.3 5.1 61.5 2.5 68 16.4 18 26.3 40.9 26.3 69 0 98.7-59.8 120.4-116.8 126.8 9.1 7.9 17.3 23.6 17.3 47.5 0 34.4-.3 62.1-.3 70.5 0 7 4.6 15 17.6 12.4A257 257 0 00512 262.4c0-142-114.6-257-256-257z" /></svg>
+							<svg class="h-12 pb-1 fill-current text-gray-900 dark:text-gray-200" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 512 512"><path d="M256 5.3C114.6 5.3 0 120.4 0 262.3a257 257 0 00175.1 244c12.8 2.3 17.5-5.6 17.5-12.5l-.4-43.7C121 465.6 106 415.7 106 415.7 94.4 386 77.6 378 77.6 378c-23.3-16 1.7-15.7 1.7-15.7 25.7 1.9 39.2 26.5 39.2 26.5 22.8 39.3 60 28 74.5 21.4 2.3-16.6 9-28 16.3-34.4-56.9-6.5-116.6-28.5-116.6-127 0-28 10-51 26.3-69-2.6-6.5-11.4-32.6 2.5-68 0 0 21.5-6.9 70.4 26.4a244.2 244.2 0 01128.2 0C369 105 390.5 112 390.5 112c14 35.3 5.1 61.5 2.5 68 16.4 18 26.3 40.9 26.3 69 0 98.7-59.8 120.4-116.8 126.8 9.1 7.9 17.3 23.6 17.3 47.5 0 34.4-.3 62.1-.3 70.5 0 7 4.6 15 17.6 12.4A257 257 0 00512 262.4c0-142-114.6-257-256-257z" /></svg>
 
-							<span class="group-hover:text-yellow-500 text-sm md:text-[0.9vw] md:pt-[0.4vw]">GitHub</span>
+							<span class="group-hover:text-yellow-500 text-sm">GitHub</span>
 						</a>
 						<!-- discord -->
 						<a href="https://discord.gg/FYVuF6CNzP" target="_blank" class="flex flex-col group">
-							<img class="h-12 md:h-[3vw] pb-1 md:pb-[0]" src="assets/discord.svg" alt="discord" />
-							<span class="group-hover:text-yellow-500 text-sm md:text-[0.9vw] md:pt-[0.4vw]">Discord</span>
+							<img class="h-12 pb-1" src="assets/discord.svg" alt="discord" />
+							<span class="group-hover:text-yellow-500 text-sm">Discord</span>
 						</a>
 					</div>
 				</div>
 			</div>
 
-			<!-- line -->
-			<div class="w-100% flex justify-center">
-				<hr class="h-px my-6 md:my-[1.6vw] w-[90%] bg-gray-300 dark:bg-gray-400 border-none" />
-			</div>
-
 			<!-- below line -->
-			<div class="container pb-4 md:pb-[1.2vw] mx-auto">
+			<div class="container px-6 pb-4 mx-auto">
+				<hr class="h-px my-6 w-[100%] bg-gray-300 border-none" />
 				<div>
-					<p class="text-center md:text-[1.1vw]">© PlayCover 2021 - All rights reserved</p>
+					<p class="text-center">© PlayCover 2021 - All rights reserved</p>
 				</div>
 			</div>
 		</footer>
