--- a/public/index.html
+++ b/public/index.html
@@ -155,7 +155,7 @@
 		<!-- content -->
 		<main>
 			<!-- hero section -->
-			<div id="hero-content" class="flex flex-col items-center lg:items-start lg:flex-row justify-center space-y-10 lg:space-y-0 lg:space-x-40 pt-28 pb-10 lg:mt-auto">
+			<section id="hero-content" class="flex flex-col items-center lg:items-start lg:flex-row justify-center space-y-10 lg:space-y-0 lg:space-x-40 pt-28 pb-10 lg:mt-auto">
 				<!-- text -->
 				<div id="hero-text" class="flex flex-col space-y-6">
 					<!-- intro text -->
@@ -187,7 +187,7 @@
 				<div id="hero-image">
 					<img class="max-w-xs md:max-w-sm rounded shadow" src="assets/screenshot-1.jpeg" alt="genshin-impact" />
 				</div>
-			</div>
+			</section>
 		</main>
 
 		<!-- footer-->
