fixed language menu transition

--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
 							</button>
 
 							<!-- language menu -->
-							<div class="language-menu absolute bg-white dark:bg-[#141414] right-0 rounded-md text-[17px] px-[18px] pb-3 pt-6 transform transition-all duration-300 scale-0 opacity-0 -translate-y-2/4 ease-out">
+							<div class="language-menu absolute bg-white dark:bg-[#141414] right-0 rounded-md text-[17px] px-[18px] pb-3 pt-6 transform transition-all duration-200 scale-0 opacity-0 -translate-y-2/4 ease-in-out">
 								<!-- text -->
 								<ul class="space-y-4">
 									<li>
