--- a/public/faq/index.html
+++ b/public/faq/index.html
@@ -34,10 +34,10 @@
 
 				<!-- primary nav -->
 				<div class="hidden xl:flex items-center space-x-10 pt-1 text-[1.05rem]">
-					<a href="./" class="text-yellow-500 border-b-2 border-yellow-500 py-3"> Home </a>
+					<a href="../" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Home </a>
 					<a href="download/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Download </a>
 					<a href="" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Changelog </a>
-					<a href="faq/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> FAQ </a>
+					<a href="./" class="text-yellow-500 border-b-2 border-yellow-500 py-3"> FAQ </a>
 					<a href="" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Contact Us </a>
 				</div>
 
@@ -154,42 +154,18 @@
 
 		<!-- content -->
 		<main>
-			<!-- hero section -->
-			<section id="hero-content" class="flex flex-col items-center lg:items-start lg:flex-row justify-center space-y-10 lg:space-y-0 lg:space-x-40 pt-28 pb-10 lg:mt-auto">
-				<!-- text -->
-				<div id="hero-text" class="flex flex-col space-y-6">
-					<!-- intro text -->
-					<div id="intro-text" class="max-w-full flex flex-col items-center md:block dark:text-gray-300">
-						<!-- logo -->
-						<h1 class="font-extrabold text-[48px] bg-gradient-to-b from-logo-pink to-logo-orange text-transparent bg-clip-text">PlayCover</h1>
-
-						<!-- hero text -->
-						<p class="md:pl-1 max-w-xs md:max-w-sm pt-6 md:pt-0 text-center md:text-left text-lg">an app that allows you to run iOS apps & games on M1 & Intel Mac with mouse, keyboard and controller support.</p>
-
-						<!-- Download buttons -->
-						<div class="flex flex-col lg:flex-row space-y-4 lg:space-y-0 lg:space-x-4 pt-4 lg:pt-6 text-center">
-							<a class="py-2 px-4 drop-shadow-md bg-yellow-500 dark:bg-[#791c0c] text-white dark:text-gray-200 hover:bg-yellow-400 dark:hover:bg-[#8f220e] active:bg-yellow-700 dark:active:bg-[#6e1a0b] transition-colors duration-400 rounded-md cursor-pointer" href=""> Download for M1 Mac </a>
-							<a class="py-2 px-4 drop-shadow-md bg-gray-50 dark:bg-[#3f3f3f] text-gray-800 dark:text-gray-200 hover:bg-white dark:hover:bg-[#505050] active:bg-gray-100 dark:active:bg-[#2e2e2e] transition-colors duration-400 rounded-md cursor-pointer" href=""> Download for Intel Mac </a>
-						</div>
-					</div>
-
-					<!-- build text -->
-					<div id="latest-build-text" class="hidden group lg:flex rounded-lg max-h-[17rem] w-[27.5rem] cursor-default border-2 dark:border-[#444444] hover:border-transparent dark:hover:border-transparent hover:shadow-lg hover:bg-white dark:hover:bg-[#363636] transition-all duration-300">
-						<div class="mt-6 mb-[24px] ml-8 mr-2 pr-2 overflow-hidden group-hover:overflow-y-auto text-gray-400 dark:text-[#444444] group-hover:text-gray-800 dark:group-hover:text-gray-200 transition-all duration-300 relative">
-							<p class="font-semibold text-lg">Latest Build Info (0.6.3b)</p>
-							<br />
-							<p>
-								- Keymapping elements will resize on Window size change <br /><br />
-								- Special indicator will be shown on entering and leaving editor mode <br /><br />- All parent UIViews scaled properly ( Web announcements inside Genshin are fixed, some games as genshin currently requires to restart for proper scale after window change) <br /><br />- Fixed MenuBar that covered game window in Windowed mode <br /><br />- Resolved problem of not saving key mappings for some users <br /><br />- Fixed crash on entering party menu in Genshin Impact for some users <br /><br />- Improved graphics in 3x times <br /><br />- Total average memory usage by games decreased by x2 times <br /><br />- Fixed problem when camera movement vanished after cutscene <br /><br />- Camera now properly appears after mapping without additional manipulations <br /><br />- Now PlayCover contains automated crashes report system, which works not only inside app, but also every game converted with PlayCover <br /><br />- Started migrate games settings to PlayCover for synchronisation and easily management
-							</p>
-						</div>
-					</div>
+			<header class="pt-32 pl-24"><span class="font-semibold text-3xl text-gray-700">Frequently asked questions</span></header>
+			<section class="w-screen flex flex-col items-center pt-20 space-y-9 text-lg">
+				<div class="flex items-center justify-between px-3 w-96 min-h-[3rem] rounded-md border-2 border-gray-500 bg-gray-50 shadow">
+					<span>Question 1</span>
+					<span>
+						<svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewbox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" /></svg>
+					</span>
 				</div>
 
-				<!-- image -->
-				<div id="hero-image">
-					<img class="max-w-xs md:max-w-sm rounded shadow" src="assets/screenshot-1.jpeg" alt="genshin-impact" />
-				</div>
+				<div class="flex items-center justify-between px-3 w-96 min-h-[3rem] rounded-md border-2 border-gray-500 bg-gray-50 shadow"><span>Question 2</span> <span>icon</span></div>
+
+				<div class="flex items-center justify-between px-3 w-96 min-h-[3rem] rounded-md border-2 border-gray-500 bg-gray-50 shadow"><span>Question 3</span> <span>icon</span></div>
 			</section>
 		</main>
 
