centered heading text on faq

--- a/public/faq/index.html
+++ b/public/faq/index.html
@@ -154,7 +154,7 @@
 
 		<!-- content -->
 		<main class="pb-16">
-			<header class="pt-32 pl-24"><span class="font-semibold text-4xl text-gray-700 dark:text-gray-300 transition duration-200">Frequently asked questions</span></header>
+			<header class="pt-36 pb-2 flex justify-center"><span class="font-semibold text-5xl text-gray-700 dark:text-gray-300 transition duration-200">Frequently asked questions</span></header>
 
 			<section class="w-screen flex flex-col items-center pt-16 space-y-14 text-lg">
 				<!-- question -->
