Revert to d2fd804c0ca78b3a195d9d50eaca9f0a43a72d7b

--- a/public/index.html
+++ b/public/index.html
@@ -164,7 +164,7 @@
 						<h1 class="font-extrabold text-[48px] bg-gradient-to-b from-logo-pink to-logo-orange text-transparent bg-clip-text">PlayCover</h1>
 
 						<!-- hero text -->
-						<p class="md:pl-1 max-w-xs md:max-w-sm pt-6 md:pt-0 text-center md:text-left text-lg transition duration-200">an app that allows you to run iOS apps & games on M1 & Intel Mac with mouse, keyboard and controller support.</p>
+						<p class="md:pl-1 max-w-xs md:max-w-sm pt-6 md:pt-0 text-center md:text-left text-lg">an app that allows you to run iOS apps & games on M1 & Intel Mac with mouse, keyboard and controller support.</p>
 
 						<!-- Download buttons -->
 						<div class="flex flex-col lg:flex-row space-y-4 lg:space-y-0 lg:space-x-4 pt-4 lg:pt-6 text-center">
