--- a/public/faq/index.html
+++ b/public/faq/index.html
@@ -231,8 +231,8 @@
 		</footer>
 
 		<!-- fixer for css classes used in js files but not compiled by tailwind-->
-		<!-- when JIT mode is run again, it checks html file and removes all the classes from styles.css that doesn't exist in the file even tho they exist in the js files hence it breaks stuff -->
-		<!-- hence add the classes used in js files here -->
+		<!-- when JIT watch mode is run again, it checks html file and removes all the classes from styles.css that doesn't exist in the html file even tho they exist in the js files hence it breaks stuff -->
+		<!-- add the classes used in js files here to fix -->
 		<div class="hidden rotate-180 dark:shadow border-transparent dark:border-transparent bg-gray-300 dark:bg-[#1a1a1a]"></div>
 
 		<!-- js -->
