--- a/public/faq/index.html
+++ b/public/faq/index.html
@@ -154,7 +154,15 @@
 
 		<!-- content -->
 		<main class="pb-16">
-			<header class="pt-36 pb-2 flex justify-center"><span class="font-semibold text-5xl text-gray-700 dark:text-gray-300 transition duration-200">Frequently asked questions</span></header>
+			<!-- heading -->
+			<header class="pt-32 xl:pt-36 pb-2 flex justify-center">
+				<span class="hidden xl:flex font-semibold xl:text-5xl text-gray-700 dark:text-gray-300 transition duration-200">Frequently asked questions</span>
+				<span class="xl:hidden flex flex-col items-center text-4xl font-semibold text-gray-700 dark:text-gray-300 transition duration-200 space-y-1">
+					<p>Frequently</p>
+					<p>asked</p>
+					<p>questions</p>
+				</span>
+			</header>
 
 			<section class="w-screen flex flex-col items-center pt-16 space-y-14 text-md xl:text-lg">
 				<!-- question -->
