decreased spacing between q and a in mobile view

--- a/public/faq/index.html
+++ b/public/faq/index.html
@@ -166,7 +166,7 @@
 
 			<section class="w-screen flex flex-col items-center pt-16 space-y-14 text-md xl:text-lg">
 				<!-- question -->
-				<div class="question flex flex-col items-center space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
+				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
 					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[68rem] min-h-[4rem] font-semibold rounded-md border-2 border-gray-500 dark:border-[#555555] bg-gray-50 dark:bg-[#242424] shadow dark:shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] py-3">My keybindings are acting all weird in Genshin Impact and restarting the app and Mac didn't help either!</p>
