--- a/public/faq/index.html
+++ b/public/faq/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="description" content="this is my site description" />
 		<meta name="keywords" content="8-12 words max" />
-		<title>PlayCover App</title>
+		<title>FAQ</title>
 		<link href="css/styles.css" rel="stylesheet" />
 		<link rel="shortcut icon" type="image/jpg" href="assets/favicon.png" />
 		<script src="js/local-storage-track.js"></script>
@@ -156,8 +156,8 @@
 		<main class="pb-16">
 			<!-- heading -->
 			<header class="pt-32 xl:pt-36 pb-2 flex justify-center">
-				<span class="hidden xl:flex font-semibold xl:text-5xl text-gray-700 dark:text-gray-300 transition duration-200">Frequently asked questions</span>
-				<span class="xl:hidden flex flex-col items-center text-5xl font-semibold text-gray-700 dark:text-gray-300 transition duration-200 space-y-1">
+				<span class="hidden xl:flex font-semibold lg:text-5xl text-gray-700 dark:text-yellow-500 transition duration-200">Frequently asked questions</span>
+				<span class="lg:hidden flex flex-col items-center text-5xl font-semibold text-gray-700 dark:text-yellow-500 transition duration-200 space-y-1">
 					<p>Frequently</p>
 					<p>asked</p>
 					<p>questions</p>
@@ -232,9 +232,13 @@
 			</section>
 
 			<!-- below line -->
-			<section class="container pb-4 mx-auto">
+			<section class="container flex flex-col space-y-1 pl-6 md:pl-0 pb-5 mx-auto">
 				<div>
-					<p class="text-center">© 2021 PlayCover - All rights reserved</p>
+					<p class="">A PlayCover Team Product</p>
+				</div>
+				<div class="flex flex-col md:flex-row justify-between">
+					<a href="./" class="underline text-left inline pb-1 pt-2 md:pt-0 md:pb-0">Legal Notices</a>
+					<p class="inline md:text-right">Copyright © 2021 ProfiSpieler (BeiJing) Culture Development. Co.Ltd. All rights reserved.</p>
 				</div>
 			</section>
 		</footer>
