fixed hyperlinks and adjusted copyright statement

--- a/public/legal notices/index.html
+++ b/public/legal notices/index.html
@@ -34,10 +34,10 @@
 
 				<!-- primary nav -->
 				<div class="hidden xl:flex items-center space-x-10 pt-1 text-[1.05rem]">
-					<a href="../" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Home </a>
-					<a href="download/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Download </a>
+					<a href="/public/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Home </a>
+					<a href="/public/download/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Download </a>
 					<a href="" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Changelog </a>
-					<a href="./" class="text-yellow-500 border-b-2 border-yellow-500 py-3"> FAQ </a>
+					<a href="/public/faq/" class="text-yellow-500 border-b-2 border-yellow-500 py-3"> FAQ </a>
 					<a href="" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Contact Us </a>
 				</div>
 
@@ -156,42 +156,14 @@
 		<main class="pb-16">
 			<!-- heading -->
 			<header class="pt-32 xl:pt-36 pb-2 flex justify-center">
-				<span class="hidden xl:flex font-semibold lg:text-5xl text-gray-700 dark:text-yellow-500 transition duration-200">Frequently asked questions</span>
+				<span class="hidden xl:flex font-semibold lg:text-5xl text-gray-700 dark:text-yellow-500 transition duration-200">Legal Notices</span>
 				<span class="lg:hidden flex flex-col items-center text-5xl font-semibold text-gray-700 dark:text-yellow-500 transition duration-200 space-y-1">
-					<p>Frequently</p>
-					<p>asked</p>
-					<p>questions</p>
+					<p>Legal</p>
+					<p>Notices</p>
 				</span>
 			</header>
 
-			<section class="w-screen flex flex-col items-center pt-16 space-y-14 text-md xl:text-lg">
-				<!-- question/answer -->
-				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
-					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[68rem] min-h-[4rem] font-semibold rounded-md border-2 border-gray-500 dark:border-[#555555] bg-gray-50 dark:bg-[#242424] shadow dark:shadow transition duration-200 cursor-pointer">
-						<p class="xl:max-w-[61rem] py-3">My keybindings are acting all weird in Genshin Impact and restarting the app and Mac didn't help either!</p>
-
-						<!-- arrow icon -->
-						<span>
-							<svg xmlns="http://www.w3.org/2000/svg" class="q-icon h-5 w-5 transform" fill="none" viewbox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" /></svg>
-						</span>
-					</div>
-
-					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
-						<p>
-							You could either: <br />
-							<br />
-							1. Delete and reinstall the app with 'clear app cache' checked. <br />
-							2. Run the following command to remove the .plist file which contains keybindings settings:
-						</p>
-						<!-- code -->
-						<div class="overflow-auto bg-gray-700 dark:bg-gray-800 transition duration-200 ease-in-out mt-3 p-3 rounded">
-							<code class="text-yellow-400">rm&nbsp;~/Library/Containers/com.miHoYo.GenshinImpact/Data/Library/Preferences/com.miHoYo.GenshinImpact.plist</code>
-						</div>
-					</div>
-				</div>
-			</section>
+			<section></section>
 		</main>
 
 		<!-- footer-->
