--- a/public/index.html
+++ b/public/index.html
@@ -236,8 +236,8 @@
 					<p class="">A PlayCover Team Product</p>
 				</div>
 				<div class="flex flex-col md:flex-row justify-between">
-					<a href="./" class="underline text-left inline pb-1 pt-2 md:pt-0 md:pb-0">Legal Notices</a>
-					<p class="inline md:text-right">Copyright © 2021 ProfiSpieler (BeiJing) Culture Development. Co.Ltd. All rights reserved.</p>
+					<a href="/public/legal notices/" class="underline text-left inline pb-1 pt-2 md:pt-0 md:pb-0">Legal Notices</a>
+					<p class="inline md:text-right">2021 ProfiSpieler © (BeiJing) Culture Development. Co.Ltd. All rights reserved.</p>
 				</div>
 			</section>
 		</footer>
