absolute hyperlink test

--- a/public/faq/index.html
+++ b/public/faq/index.html
@@ -237,7 +237,7 @@
 					<p class="">A PlayCover Team Product</p>
 				</div>
 				<div class="flex flex-col md:flex-row justify-between">
-					<a href="/public/legal notices/" class="underline text-left inline pb-1 pt-2 md:pt-0 md:pb-0">Legal Notices</a>
+					<a href="/legal notices/" class="underline text-left inline pb-1 pt-2 md:pt-0 md:pb-0">Legal Notices</a>
 					<p class="inline md:text-right">2021 ProfiSpieler © (BeiJing) Culture Development. Co.Ltd. All rights reserved.</p>
 				</div>
 			</section>
