--- a/public/index.html
+++ b/public/index.html
@@ -34,10 +34,10 @@
 
 				<!-- primary nav -->
 				<div class="hidden xl:flex items-center space-x-10 pt-1 text-[1.05rem]">
-					<a href="./" class="text-yellow-500 border-b-2 border-yellow-500 py-3"> Home </a>
-					<a href="download/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Download </a>
-					<a href="" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Changelog </a>
-					<a href="faq/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> FAQ </a>
+					<a href="/" class="text-yellow-500 border-b-2 border-yellow-500 py-3"> Home </a>
+					<a href="/download/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Download </a>
+					<a href="/changelog/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Changelog </a>
+					<a href="/faq/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> FAQ </a>
 					<a href="" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Contact Us </a>
 				</div>
 
@@ -236,7 +236,7 @@
 					<p class="">A PlayCover Team Product</p>
 				</div>
 				<div class="flex flex-col md:flex-row justify-between">
-					<a href="/legal notices/" class="underline text-left inline pb-1 pt-2 md:pt-0 md:pb-0">Legal Notices</a>
+					<a href="/legal-notices/" class="underline text-left inline pb-1 pt-2 md:pt-0 md:pb-0">Legal Notices</a>
 					<p class="inline md:text-right">2021 ProfiSpieler © (BeiJing) Culture Development. Co.Ltd. All rights reserved.</p>
 				</div>
 			</section>
