added legal notice text

--- a/public/legal-notices/index.html
+++ b/public/legal-notices/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="description" content="this is my site description" />
 		<meta name="keywords" content="8-12 words max" />
-		<title>FAQ</title>
+		<title>Legal Notice</title>
 		<link href="css/styles.css" rel="stylesheet" />
 		<link rel="shortcut icon" type="image/jpg" href="assets/favicon.png" />
 		<script src="js/local-storage-track.js"></script>
@@ -156,14 +156,34 @@
 		<main class="pb-16">
 			<!-- heading -->
 			<header class="pt-32 xl:pt-36 pb-2 flex justify-center">
-				<span class="hidden xl:flex font-semibold lg:text-5xl text-gray-700 dark:text-yellow-500 transition duration-200">Legal Notices</span>
+				<span class="hidden xl:flex font-semibold lg:text-5xl text-gray-700 dark:text-yellow-500 transition duration-200">Legal Notice</span>
 				<span class="lg:hidden flex flex-col items-center text-5xl font-semibold text-gray-700 dark:text-yellow-500 transition duration-200 space-y-1">
 					<p>Legal</p>
 					<p>Notices</p>
 				</span>
 			</header>
 
-			<section></section>
+			<!-- paras -->
+			<section class="px-52 pt-20 space-y-16 text-gray-700 dark:text-gray-300">
+				<section class="space-y-3">
+					<h2 class="font-medium text-2xl">Copyright Notice</h2>
+					<div class="pl-5 pt-2">
+						<ul class="list-outside list-disc space-y-3">
+							<li>All contents, software, programs, code, technologies and user interfaces contained on this website are protected by the copyright laws. The copyright belongs to [Profispieler] and is subject to the Copyright Law of the People's Republic of China, copyright laws of other countries and relevant copyright conventions.</li>
+							<li>[Profispieler] reserves the right to pursue legal responsibilities if any use of the aforesaid copyright is beyond the scope of reasonable use and without its written permission.</li>
+						</ul>
+					</div>
+				</section>
+				<section class="space-y-3">
+					<h2 class="font-medium text-2xl">Trademark Statement</h2>
+					<div class="pl-5 pt-2">
+						<ul class="list-outside list-disc space-y-3">
+							<li>All trademarks and marks used and displayed on this website belong to [Profispieler] and are protected by the Trademark Law of the People's Republic of China, the Anti Unfair Competition Law of the People's Republic of China and relevant international conventions.</li>
+							<li>Without prior written permission of [Profispieler] , trademarks, marks and software names of [Profispieler] shall not be used in any manner whatsoever. Unauthorized use of the aforesaid trademarks may constitute trademark infringement and [Profispieler] reserves the right to pursue legal responsibilities.</li>
+						</ul>
+					</div>
+				</section>
+			</section>
 		</main>
 
 		<!-- donate popup -->
@@ -274,7 +294,7 @@
 					<p class="">A PlayCover Team Product</p>
 				</div>
 				<div class="flex flex-col md:flex-row justify-between">
-					<a href="/legal-notices/" class="underline text-left inline pb-1 pt-2 md:pt-0 md:pb-0">Legal Notices</a>
+					<a href="/legal-notices/" class="underline text-left inline pb-1 pt-2 md:pt-0 md:pb-0">Legal Notice</a>
 					<p class="inline md:text-right">2021 ProfiSpieler © (BeiJing) Culture Development. Co.Ltd. All rights reserved.</p>
 				</div>
 			</section>
