added chinese name in legal notice

--- a/public/faq/index.html
+++ b/public/faq/index.html
@@ -156,7 +156,7 @@
 		<main class="pb-16">
 			<!-- heading -->
 			<header class="pt-32 xl:pt-36 pb-2 flex justify-center">
-				<span class="hidden xl:flex font-semibold lg:text-5xl text-gray-700 dark:text-yellow-500 transition duration-200">Frequently asked questions</span>
+				<span class="hidden lg:flex font-semibold lg:text-5xl text-gray-700 dark:text-yellow-500 transition duration-200">Frequently asked questions</span>
 				<span class="lg:hidden flex flex-col items-center text-5xl font-semibold text-gray-700 dark:text-yellow-500 transition duration-200 space-y-1">
 					<p>Frequently</p>
 					<p>asked</p>
