--- a/public/legal-notices/index.html
+++ b/public/legal-notices/index.html
@@ -120,7 +120,7 @@
 			<!-- mobile menu -->
 			<div class="mobile-menu hidden relative">
 				<div class="flex flex-col items-center space-y-5 pt-5 pb-3 text-lg md:text-xl">
-					<a href="../" class="block text-yellow-600 pb-1 border-b-2 border-yellow-600">Home</a>
+					<a href="../" class="block text-gray-600 dark:text-gray-300">Home</a>
 					<a href="" class="block text-gray-600 dark:text-gray-300">Download</a>
 					<a href="" class="block text-gray-600 dark:text-gray-300">Update Log</a>
 					<a href="faq/" class="block text-gray-600 dark:text-gray-300">FAQ</a>
@@ -156,10 +156,10 @@
 		<main class="pb-16">
 			<!-- heading -->
 			<header class="pt-32 xl:pt-36 pb-2 flex justify-center">
-				<span class="hidden xl:flex font-semibold lg:text-5xl text-gray-700 dark:text-yellow-500 transition duration-200">Legal Notice</span>
+				<span class="hidden lg:flex font-semibold lg:text-5xl text-gray-700 dark:text-yellow-500 transition duration-200">Legal Notice</span>
 				<span class="lg:hidden flex flex-col items-center text-5xl font-semibold text-gray-700 dark:text-yellow-500 transition duration-200 space-y-1">
 					<p>Legal</p>
-					<p>Notices</p>
+					<p>Notice</p>
 				</span>
 			</header>
 
@@ -169,8 +169,8 @@
 					<h2 class="font-medium text-2xl">Copyright Notice</h2>
 					<div class="pl-5 pt-2">
 						<ul class="list-outside list-disc space-y-3">
-							<li>All contents, software, programs, code, technologies and user interfaces contained on this website are protected by the copyright laws. The copyright belongs to [Profispieler] and is subject to the Copyright Law of the People's Republic of China, copyright laws of other countries and relevant copyright conventions.</li>
-							<li>[Profispieler] reserves the right to pursue legal responsibilities if any use of the aforesaid copyright is beyond the scope of reasonable use and without its written permission.</li>
+							<li>All contents, software, programs, code, technologies and user interfaces contained on this website are protected by the copyright laws. The copyright belongs to [Profispieler] [云玩家] and is subject to the Copyright Law of the People's Republic of China, copyright laws of other countries and relevant copyright conventions.</li>
+							<li>[Profispieler] [云玩家] reserves the right to pursue legal responsibilities if any use of the aforesaid copyright is beyond the scope of reasonable use and without its written permission.</li>
 						</ul>
 					</div>
 				</section>
